--- a/Question 1/question_1.html
+++ b/Question 1/question_1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
 <html>
-    <header>
+    <head>
         <title>Question 1</title>
         <link rel="stylesheet" href="style.css">
-    </header>
+    </head>
 
     <body>
     
